# procgen-1

./: .gitignore  Procfile  README.md  build.sh  env.js  environment.yml  requirements.txt
experiment-server/: README.md  biyik.py  gen_questions.py  gen_trajectory.py  pyproject.toml  schema.sql
experiment-server/experiment_server/: app.py  biyik.py  gen_questions.py  gen_trajectory.py  package-lock.json  package.json  query.py  random_policy.py  schema.sql  serialize.py  type.py  types.py  util.py  webpack.config.js
experiment-server/experiment_server/js/: interact.js  record.js  replay.js  utils.js
experiment-server/experiment_server/static/: replay.css  replay.js
experiment-server/experiment_server/templates/: interact.html  login.html  record.html  replay.html
experiment-server/static/: script.js
experiment-server/templates/: index.html
experiment-server/tests/: strategies.py  test_biyik.py  test_gen_trajs.py  test_random_policy.py  test_serialize.py  test_types.py  test_utils.py
experiment-sever/: biyik.py  gen_questions.py  gen_trajectory.py  random_policy.py  schema.sql  util.py
experiment_server/: pyproject.toml
experiment_server/experiment_server/: .eslintrc.js  app.py  clean_db.sh  package.json  schema.sql
experiment_server/experiment_server/js/: interact.js  stats.js  yuri_demo.js
experiment_server/experiment_server/templates/: interact.html  replay.html
experiment_server/tests/: test_biyik.py  test_serialize.py  test_types.py  test_utils.py
postprocessing/: answers.py
procgen/: build.sh  env.py  interactive.py  test-set-state.js
procgen/src/: basic-abstract-game.cpp  basic-abstract-game.h  cheerpgame.cpp  cheerputils.cpp  game.cpp  game.h  resources.cpp  resources.h  state.h
procgen/src/games/: miner.cpp
question-gen/: README.md  pyproject.toml
question-gen/question_gen/: biyik.py  feature_datasets_iterator.py  gen_action_pairs.py  gen_questions.py  gen_trajectory.py  logspace.py  trajectory_db.py
question-gen/tests/: test_biyik.py  test_gen_trajs.py  test_random_policy.py  test_utils.py
