[project]
name = "experiment_server"
version = "0.0.1"
description = "Experiment server for reward learning from preferences"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {email = "jordan.jack.schneider@gmail.com"},
  {name = "Jordan Schneider"}
]
classifiers = [
  "Programming Language :: Python :: 3"
]
dependencies = [
    "numpy >= 1.21",
    "procgen @ git+https://github.com/jordan-schneider/procgen@master#egg=procgen",
    "linear_procgen @ git+https://github.com/jordan-schneider/linear-procgen@main#egg=linear_procgen",
    "scipy",
    "flask",
    "fire",
    "gym3",
    "arrow",
    "sklearn",
    "boto3[crt]"
]

[project.optional-dependencies]
test = [
  "pytest",
  "black",
  "mypy",
  "pylint",
  "hypothesis",
]

[project.urls]
repository = "https://github.com/jordan-schneider/web-procgen"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["experiment_server"]
package-data = {experiment_server = ["py.typed"]}
